Auto-handles pages

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -3,3 +3,8 @@ name: MenuMetaMod
 main: com.shawlyne.mc.MenuMetaMod.MenuMetaMod
 
 version: 0.1
+
+commands:
+    menu:
+        description: Player specific menu response commands
+        usage: /menu
