--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,9 +2,12 @@ name: MenuMetaMod
 
 main: com.shawlyne.mc.MenuMetaMod.MenuMetaMod
 
-version: 0.1
+version: 0.4
 
 commands:
     menu:
         description: Player specific menu response commands
         usage: /menu
+    m:
+        description: Launch config specified menu
+        usage: /m <Menu.command from config file>
